@@ -61,7 +61,7 @@
       </listitem>
       <listitem>
         <para>
-          Or edit your corresponding preference.
+          Or edit the corresponding preference.
         </para>
       </listitem>
     </itemizedlist>
@@ -86,7 +86,7 @@
       </listitem>
       <listitem>
         <para>
-          Or edit your corresponding preference.
+          Or edit the corresponding preference.
         </para>
       </listitem>
     </itemizedlist>
